k8s/test/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dots-test
  labels:
    app: dots
    environment: test
